# pysheetson

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  test.ipynb
docs/: README.md  index.html  index.md  quickstart.html  quickstart.md
examples/: batch_and_dataframe_example.py  quickstart.py
pysheetson/: __init__.py
scripts/: build.cmd  format.cmd  install-dev.cmd  install-editable.cmd  publish-pypi.cmd  publish-testpypi.cmd  test.cmd  typecheck.cmd
tests/: test_import.py
