[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysheetson"
version = "0.1.1"
description = "Tiny Python client for the Sheetson API (Google Sheets as a REST API)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [{name = "KAMBOU ANICET CYRILLE"},]
keywords = ["google-sheets", "api", "client", "sheetson"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests>=2.28",
    "pandas"
]

[project.urls]
Homepage = "https://mr-kam.github.io/pysheetson/"
Repository = "https://github.com/Mr-KAM/pysheetson.git"
